added header thing

--- a/public/about.html
+++ b/public/about.html
@@ -41,21 +41,21 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="py-5">
+            <header class="header-img py-5 ">
                 <div class="container px-5">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-8 col-xxl-6">
-                            <div class="text-center my-5">
-                                <h1 class="fw-bolder mb-3">Our Mission Statement</h1>
-                                <p class="lead fw-normal text-muted mb-4">Our goal is to increase accessibility to the outdoors, provide support to victims of abuse in the outdoor community, support the families of missing/murdered hikers, and healing with art.</p>
-                                <a class="btn btn-dark btn-lg" href="#scroll-target">Read our story</a>
+                    <div class="row gx-5 align-items-center justify-content-center">
+                            <div class="text-center">
+                                <h1 class="display-5 fw-bolder text-white mb-2">Our Mission Statement</h1>
+                                <p class="lead fw-normal text-white-75 mb-0">Our goal is to increase accessibility to the outdoors, provide support to victims of abuse in the outdoor community, support the families of missing/murdered hikers, and healing with art.</p>
+                                <div class="py-5 justify-content-sm-center justify-content-xl-start">
+                                    <a class="btn btn-light btn-lg px-4 me-sm-3" href="#scroll-target">Our Story</a>
                             </div>
-                        </div>
                     </div>
                 </div>
             </header>
+
             <!-- About section one-->
-            <section class="py-5 bg-light" id="scroll-target">
+            <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/20230102_074337.jpg?alt=media&token=98f890df-3f9d-4c96-bf38-72e37fa193e8" alt="..." /></div>
@@ -67,7 +67,7 @@
                 </div>
             </section>
             <!-- About section two-->
-            <section class="py-5">
+            <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/20230102_075824.jpg?alt=media&token=695136a4-4d55-41cc-9415-f1fabbf29cee" alt="..." /></div>
