--- a/public/resources.html
+++ b/public/resources.html
@@ -38,85 +38,80 @@
                     </div>
                 </div>
             </nav>
+                        <!-- Header-->
+                        <header class="header-img py-5 ">
+                            <div class="container px-5">
+                                <div class="row gx-5 align-items-center justify-content-center">
+                                        <div class="text-center">
+                                            <h1 class="display-5 fw-bolder text-white mb-2">Resources</h1>
+                                            <p class="lead fw-normal text-white-75 mb-0">How can we help you?</p>
+                                </div>
+                            </div>
+                        </header>
             <!-- Page Content-->
             <section class="py-5">
                 <div class="container px-5 my-5">
-                    <div class="text-center mb-5">
-                        <h1 class="fw-bolder">Resources</h1>
-                        <p class="lead fw-normal text-muted mb-0">How can we help you?</p>
-                    </div>
                     <div class="row gx-5">
                         <div class="col-xl-8">
                             <!-- FAQ Accordion 1-->
-                            <h2 class="fw-bolder mb-3">Scholarship Funds</h2>
+                            <h2 class="fw-bolder mb-3">Volunteer Opportunities</h2>
                             <div class="accordion mb-5" id="accordionExample">
                                 <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Accordion Item #1</button></h3>
+                                    <h3 class="accordion-header" id="headingOne">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            Missing Hiker Searcher
+                                        </button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>This is the first item's accordion body.</strong>
-                                            It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Accordion Item #2</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>This is the second item's accordion body.</strong>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Accordion Item #3</button></h3>
-                                    <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <strong>This is the third item's accordion body.</strong>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            <strong>This volunteer opportunity is for those who have a strong desire to be boots on the ground. </strong>
+                                            We search for those that law-enforcement and other official bodies have written off. Our goal is to bring peace to the families and loved ones of missing and murdered hikers in the Pacific Northwest.<p>
+                                                To get started, please fill out our <a href="https://docs.google.com/document/d/1IxQacOlTYSXQg6Vyf5gJ3OTYIih5fqpAeZbhORZEU_w/edit">volunteer form</a>. 
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- FAQ Accordion 2-->
-                            <h2 class="fw-bolder mb-3">Other Resource Groups</h2>
+                            <!-- SCHOLARSHIPS -->
+                            <h2 class="fw-bolder mb-3">Scholarship Funds</h2>
                             <div class="accordion mb-5 mb-xl-0" id="accordionExample2">
                                 <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Accordion Item #1</button></h3>
+                                    <h3 class="accordion-header" id="headingOne"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">American Mountain Guide Association</button></h3>
                                     <div class="accordion-collapse collapse show" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>This is the first item's accordion body.</strong>
-                                            It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            The American Mountain Guide Association is a professional organization for mountain guides across multiple disciplines in the United States.
+                                            Access to the guiding industry is expensive and difficult to achieve, but AMGA has scholarship opportunities available to those motivated. To learn more, visit AMGA's <a href="https://amga.com/scholarships/">website</a>.
+                                            <p><b>Applications tend to close around June for scholarships for the following year.</b></p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Accordion Item #2</button></h3>
+                                    <h3 class="accordion-header" id="headingTwo"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">AIARE Education</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseTwo" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>This is the second item's accordion body.</strong>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            AIARE is a nonprofit educational organization whose aim is to create an evidence-based avalanche education model for backcountry users with the belief that avalanche education, research, and training can prevent injuries and fatalities.
+                                            <br/>
+                                            They provide scholarships for:
+                                            <ul>
+                                                <li>AIARE Instructor Training courses</li>
+                                                <li>AIARE PRO courses</li>
+                                                <li>AIARE Recreational classes</li>
+                                            </ul>
+                                            Note: You must apply for the respective course for which you seek a scholarship.
+                                            <p>To learn more, please visit AIARE's <a href="https://avtraining.org/scholarships/">website.</a></p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
-                                    <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Accordion Item #3</button></h3>
+                                    <h3 class="accordion-header" id="headingThree"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">The Mountaineers</button></h3>
                                     <div class="accordion-collapse collapse" id="collapseThree" aria-labelledby="headingThree" data-bs-parent="#accordionExample2">
                                         <div class="accordion-body">
-                                            <strong>This is the third item's accordion body.</strong>
-                                            It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the
-                                            <code>.accordion-body</code>
-                                            , though the transition does limit overflow.
+                                            The Mountaineers are a local, non-profit Washington-based organization whose goal is to get people outdoors. They have scholarships available for all of their courses, programs, and memberships. 
+
+                                            Their courses are priced lower than professional organiztions, but costs add up quickly. 
+                                            Their scholarships can cover up to <b>70% of the price of your course or membership</b>. 
+                                            <br/>
+                                            Note: scholarships can NOT be applied retroactively to courses, activities, or memberships for which you have already registered/paid.
+                                            <p>To learn more, please visit the Mountaineers' <a href="https://www.mountaineers.org/membership/scholarship-financial-assistance">website.</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -131,13 +126,10 @@
                                             <p class="text-muted mb-4">
                                                 Contact us at
                                                 <br />
-                                                <a href="contact.html">ahighercallingpnw@outlook.com</a>
+                                                <a href="mailto:ahighercallingpnw@outlook.com">ahighercallingpnw@outlook.com</a>
                                             </p>
                                             <div class="h6 fw-bolder">Follow us</div>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-twitter"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-facebook"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-linkedin"></i></a>
-                                            <a class="fs-5 px-2 link-dark" href="#!"><i class="bi-youtube"></i></a>
+                                            <a class="fs-5 px-2 link-dark" href="https://instagram.com/ahighercallingpnw"><i class="bi-instagram"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -153,9 +145,9 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; A Higher Calling 2023</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
+                        <a class="link-light small" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
+                        <a class="link-light small" href="#!"><i class="fab fa-facebook-f"></i></a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="contact.html">Contact</a>
                     </div>
