--- a/public/blog-home.html
+++ b/public/blog-home.html
@@ -38,12 +38,16 @@
                     </div>
                 </div>
             </nav>
-            <!-- Page Content-->
-            <section class="py-5">
+            <!-- Header-->
+            <header class="header-img py-5 ">
                 <div class="container px-5">
-                    <h1 class="fw-bolder fs-5 mb-4">Coming soon!</h1>
+                    <div class="row gx-5 align-items-center justify-content-center">
+                            <div class="text-center">
+                                <h1 class="display-5 fw-bolder text-white mb-2">Coming soon!</h1>
+                            </div>
+                    </div>
                 </div>
-            </section>
+            </header>
 
             <!-- <section class="py-5">
                 <div class="container px-5">
