changed pictures, refactored links to fb and newsletters

--- a/public/about.html
+++ b/public/about.html
@@ -88,7 +88,7 @@
                     <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="assets/mel_fernandez.png" alt="..." />
                                 <h5 class="fw-bolder">Mel Fernandez</h5>
                                 <div class="fst-italic text-muted">Founder</div>
                             </div>
@@ -113,7 +113,7 @@
                     <div class="col-auto">
                         <a class="link-light small" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="link-light small" href="https://www.facebook.com/groups/354203613259236/"><i class="fab fa-facebook-f"></i></a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="contact.html">Contact</a>
                     </div>
