--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,9 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image fa-4x">
-                            <i class="fas fa-person fa-stack-1x fa-inverse"></i>
+                            <img class="rounded-circle img-fluid"
+                            src="assets\survivor_advocacy.jpg"
+                            alt="Illustration of pink and purple mountains with the text 'Survivor Advocacy'">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -86,18 +88,33 @@
                     </li>
                     <li class="timeline-inverted">
                         <span class="timeline-image fa-4x">
-                            <i class="fas fa-vest fa-stack-1x"></i>
+                            <img class="rounded-circle img-fluid"
+                                src="assets\hikers.png"
+                                alt="Image of a map pin that had the text 'The Search Begins' underneath">
                             </span>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Support</h4>
                                 <h5 class="subheading text-muted fst-italic">Missing and Murdered Hikers</h5>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Supporting community-based, family-lead searches for missing and murdered</p></div>
+                            <div class="timeline-body">
+                                <p class="text-muted">Supporting family-lead, community-based searches for missing and murdered hikers in the Washington alpine.</p>
+                                <br/>
+                                <p>
+                                    <b>Our Current Areas of Focus</b>
+                                    <ul class="text-muted" style="text-align: left;">
+                                        <li>Join the <a href="https://www.facebook.com/groups/354203613259236/">‘Searching for Ian Eckles’</a> Facebook page.</li>
+                                        <li>Follow the <a href="http:// Instagram.com/ahighercallingpnw">Instagram</a>!</li>
+                                    </ul>
+                                </p>
+                            </div>
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/PRC_Logo.png?alt=media&token=fecc7844-739a-41b3-8d26-c1ac7503f1e8" alt="..." /></div>
+                        <div class="timeline-image">
+                            <img class="rounded-circle img-fluid" 
+                            src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/PRC_Logo.png?alt=media&token=fecc7844-739a-41b3-8d26-c1ac7503f1e8" 
+                            alt="Image of an ice axe with the title Punk Rock Climbers" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Community</h4>
@@ -108,14 +125,16 @@
                     </li>
                     <li class="timeline-inverted">
                         <span class="timeline-image fa-4x">
-                            <i class="fas fa-paint-brush fa-stack-1x fa-inverse"></i>
+                            <img class="rounded-circle img-fluid bg-light"
+                                src="assets/climbing_art.png"
+                                alt="Picture of paintbrush with the text 'The Climbing Art Collective'">
                             </span>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Expression</h4>
-                                <h4 class="subheading text-muted fst-italic">Climbing Art</h4>
+                                <h4 class="subheading text-muted fst-italic">The Climbing Art Collective</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Advocating for more art in the climbing community. The PNW branch of the <i>Climb, Heal, Overcome</i> <a href="https://instagram.com/ahighercallingpnw">Instagram</a> features local artists regularly!</p></div>
+                            <div class="timeline-body"><p class="text-muted">Giving back to the climbing community through art. Our <a href="http://www.instagram.com/climbingartcollective ">Instagram</a> features local artists regularly!</p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
@@ -133,50 +152,6 @@
             </div>
         </section>
 
-            
-            <!-- Blog preview section-->
-            <!-- <section class="py-5 bg-light">
-                <div class="container px-5 my-5">
-                    <div class="row gx-5 justify-content-center">
-                        <div class="col-lg-8 col-xl-6">
-                            <div class="text-center">
-                                <h2 class="fw-bolder">From our blog</h2>
-                                <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque fugit ratione dicta mollitia. Officiis ad.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row gx-5">
-                        <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
-                                <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
-                                    <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
-                                <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
-                                    <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
-                                <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
-                                    <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
                     <!-- Call to action-->
                     <aside class="bg-dark bg-gradient rounded-3 p-4 p-sm-5 mt-5">
                         <div class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
@@ -186,8 +161,9 @@
                             </div>
                             <div class="ms-xl-4">
                                 <div class="input-group mb-2">
-                                    <input class="form-control" type="text" placeholder="Email address..." aria-label="Email address..." aria-describedby="button-newsletter" />
-                                    <button class="btn btn-outline-light" id="button-newsletter" type="button">Sign up</button>
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKYd4mHVhobN0zWgKlDtrwHPDfg6onNP6ESLJsNlRFB9u-Iw/viewform">
+                                        <button class="btn btn-outline-light" id="button-newsletter" type="button">Sign up</button>
+                                    </a>
                                 </div>
                                 <div class="small text-white-50">We care about privacy, and will never share your data.</div>
                             </div>
@@ -204,7 +180,7 @@
                     <div class="col-auto">
                         <a class="link-light small" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="link-light small" href="https://www.facebook.com/groups/354203613259236/"><i class="fab fa-facebook-f"></i></a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="contact.html">Contact</a>
                     </div>
