--- a/public/contact.html
+++ b/public/contact.html
@@ -49,40 +49,10 @@
                 <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">We Would Love to Hear From You!</h1>
-                    <p class="mb-5">Currently our newsletter form is under construction, but please visit us on Instagram or Facebook, or email us directly!</p>
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- * * SB Forms Contact Form * *-->
-                    <!-- * * * * * * * * * * * * * * *-->
-                    <!-- This form is pre-integrated with SB Forms.-->
-                    <!-- To make this form functional, sign up at-->
-                    <!-- https://startbootstrap.com/solution/contact-forms-->
-                    <!-- to get an API token!-->
-                    <form id="contactForm" data-sb-form-api-token="API_TOKEN">
-                        <!-- Email address input-->
-                        <div class="row input-group-newsletter">
-                            <div class="col"><input class="form-control" id="email" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                            <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                        </div>
-                        <div class="invalid-feedback mt-2" data-sb-feedback="email:required">An email is required.</div>
-                        <div class="invalid-feedback mt-2" data-sb-feedback="email:email">Email is not valid.</div>
-                        <!-- Submit success message-->
-                        <!---->
-                        <!-- This is what your users will see when the form-->
-                        <!-- has successfully submitted-->
-                        <div class="d-none" id="submitSuccessMessage">
-                            <div class="text-center mb-3 mt-2">
-                                <div class="fw-bolder">Form submission successful!</div>
-                                To activate this form, sign up at
-                                <br />
-                                <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                            </div>
-                        </div>
-                        <!-- Submit error message-->
-                        <!---->
-                        <!-- This is what your users will see when there is-->
-                        <!-- an error submitting the form-->
-                        <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                    </form>
+                    <p class="mb-5">Select from one of our three newsletters through our email sign-up form!</p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdKYd4mHVhobN0zWgKlDtrwHPDfg6onNP6ESLJsNlRFB9u-Iw/viewform">
+                        <button class="btn btn-outline-light" id="button-newsletter" type="button">Sign up</button>
+                    </a>
                 </div>
             </div>
         </main>
@@ -94,7 +64,7 @@
                     <div class="col-auto">
                         <a class="link-light small" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="link-light small" href="https://www.facebook.com/groups/354203613259236/"><i class="fab fa-facebook-f"></i></a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="contact.html">Contact</a>
                     </div>
@@ -103,11 +73,10 @@
         </footer>
         </div>
         <!-- Social Icons-->
-        <!-- For more icon options, visit https://fontawesome.com/icons?d=gallery&p=2&s=brands-->
         <div class="social-icons">
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
                 <a class="btn btn-dark m-3" href="mailto:ahighercallingpnw@outlook.com"><i class="fas fa-envelope"></i></a>
-                <a class="btn btn-dark m-3" href="#!"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark m-3" href="https://www.facebook.com/groups/354203613259236/"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-dark m-3" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
@@ -115,11 +84,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 
 </html>
