--- a/public/resources.html
+++ b/public/resources.html
@@ -10,6 +10,8 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -147,7 +149,7 @@
                     <div class="col-auto">
                         <a class="link-light small" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="link-light small" href="https://www.facebook.com/groups/354203613259236/"><i class="fab fa-facebook-f"></i></a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="contact.html">Contact</a>
                     </div>
